# Bose-Hubbard-Phase-Transition

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mean_field.cpp  mean_field.h  operator.cpp  operator.h  plot.py
docs/html/: annotated.html  classBH-members.html  classBH.html  classBH__inherit__graph.dot  classHamiltonian-members.html  classHamiltonian.html  classHamiltonian__inherit__graph.dot  classNeighbours-members.html  classNeighbours.html  classOperator-members.html  classOperator.html  classXY-members.html  classXY.html  classXY__inherit__graph.dot  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hamiltonian_8cpp.html  hamiltonian_8cpp__incl.dot  hamiltonian_8h.html  hamiltonian_8h__dep__incl.dot  hamiltonian_8h__incl.dot  hamiltonian_8h_source.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherits.html  main_8cpp.html  main_8cpp__incl.dot  neighbours_8cpp.html  (+11 more)
docs/latex/: annotated.tex  classBH.tex  classBH.tex.tmp  classBH__coll__graph.dot  classHamiltonian.tex  classHamiltonian__inherit__graph.dot  classNeighbours.tex  classOperator.tex  classXY.tex  classXY__coll__graph.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.tex.tmp  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hamiltonian_8cpp.tex  hamiltonian_8cpp__incl.dot  hamiltonian_8h.tex  hamiltonian_8h__dep__incl.dot  hamiltonian_8h__incl.dot  hamiltonian_8h_source.tex  hierarchy.tex  main_8cpp.tex  main_8cpp__incl.dot  neighbours_8cpp.tex  neighbours_8cpp__incl.dot  neighbours_8h.tex  neighbours_8h__dep__incl.dot  neighbours_8h__incl.dot  neighbours_8h_source.tex  operator_8cpp.tex  operator_8cpp__incl.dot  operator_8h.tex  (+10 more)
include/: clock.hpp  hamiltonian.h  neighbours.h  operator.h  operator.hpp  thread_pool.hpp
src/: hamiltonian.cpp  main.cpp  neighbours.cpp  operator.cpp
(+523 files in other folders)
